# rustSet

./: .gitignore  README.md  docker-compose.yml  download_cards.sh
frontend/: README.md  dev-server.js  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: Anagrams.jsx  AnagramsGameOverModal.jsx  App.jsx  Game.jsx  GameOverModal.jsx  Lobby.jsx  NameModal.jsx  SetBoard.jsx  SetGame.jsx  const.js  index.css  main.jsx
frontend/src/utils/: imagePreloader.js  test.js
server/: Cargo.toml  Dockerfile  README.md  setup_python.fish  setup_python.sh  start_server.sh
server/src/: game.rs  main.rs  player.rs  room.rs  router.rs  user.rs
server/src/game/: anagrams.rs  mod.rs  player.rs  set.rs
