[package]
name = "rust_ws_server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.39", features = ["full"] }
warp = "0.3"
futures = "0.3"
tokio-tungstenite = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
pretty_env_logger = "0.4"
uuid = { version = "1", features = ["v4", "serde", "fast-rng"] }
rand = "0.9.2"
lazy_static = "1.4"
pyo3 = { version = "0.27.1", features = ["auto-initialize"] }

[build-dependencies]
nlprule-build = "0.6.4"
